# pdftool

./: LICENSE  MANIFEST.in  README.md  clean_build.sh  pyproject.toml
pdftool/: __init__.py  main.py  watermark.py
